crates/djls-project/tests/snapshots/settings_extraction__ambiguous_branch_alias_extracts_partial_installed_apps.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values:
    - a
    - b
  extraction: partial
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      extraction: full
  extraction: full
