crates/djls-project/tests/snapshots/settings_extraction__baseline_literal_installed_apps_and_templates.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values:
    - django.contrib.admin
    - blog.apps.BlogConfig
  extraction: full
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs:
        - resolved: /proj/templates
        - resolved: /shared/templates
      app_dirs: true
      libraries:
        - - custom
          - blog.templatetags.custom
      builtins:
        - django.templatetags.static
      extraction: full
  extraction: full
