crates/djls-project/tests/snapshots/settings_extraction__composed_app_lists_via_literal_aliases_degrade.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values: []
  extraction: partial
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      extraction: full
  extraction: full
