crates/djls-project/tests/snapshots/settings_extraction__composed_app_lists_via_literal_aliases_extract.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values:
    - django.contrib.admin
    - myapp
  extraction: complete
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      context_processors: []
      extraction: complete
  extraction: complete
