crates/djls-project/tests/snapshots/settings_extraction__duplicate_template_dirs_keys_append_values.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values:
    - blog
  extraction: full
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs:
        - resolved: /proj/myproject/first
        - resolved: /proj/myproject/second
      app_dirs: true
      libraries: []
      builtins: []
      extraction: full
  extraction: full
