crates/djls-project/tests/snapshots/settings_extraction__duplicate_template_dirs_keys_use_last_value.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values:
    - blog
  extraction: complete
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs:
        - resolved: /proj/myproject/second
      app_dirs: true
      libraries: []
      builtins: []
      extraction: complete
  extraction: complete
