crates/djls-project/tests/snapshots/settings_extraction__non_star_import_from_extra_search_path_is_not_followed.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      context_processors: []
      extraction: complete
  extraction: complete
