crates/djls-project/tests/snapshots/settings_extraction__split_settings_aliased_non_star_import_feeds_installed_apps.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values:
    - django.contrib.auth
    - blog
  extraction: complete
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      context_processors: []
      extraction: complete
  extraction: complete
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
