crates/djls-project/tests/snapshots/settings_extraction__split_settings_cyclic_non_star_import_does_not_hang.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values:
    - django.contrib.auth
  extraction: full
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      extraction: full
  extraction: full
