crates/djls-project/tests/snapshots/settings_extraction__split_settings_non_star_import_chain_resolves_imported_setting.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values:
    - django.contrib.auth
    - blog
  extraction: complete
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      extraction: complete
  extraction: complete
